--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hs_website",
-  "homepage": "https://henr1quesantos.github.io/hs_website",
+  "homepage": "https://henriquesantos.dev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
